--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
     <div id="age"></div>
   </div>
 
-  <div id="info">
-    <a href="https://g.page/ligadosbotecos?share" target="_blank">
+  <a 
+    id="info"
+    target="_blank"
+    href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NjFqMzBkcHBjaGdqY2JiNDZoaWppYjlrY2dybWNiOXA2Z3EzNGI5azZjbzNjZHBwNmdvM2NvaHBjayBreWxlLnR0Lmt1b0Bt&tmsrc=kyle.tt.kuo%40gmail.com" 
+  >
       Liga dos Botecos<br/>
-      R. Álvaro Ramos, 170 - Botafogo
-    </a><br/>
-    06 de agosto de 2022 às 16h
-  </div>
+      R. Álvaro Ramos, 170 - Botafogo<br/>
+      06 de agosto de 2022 às 16h<br/>
+      Clique aqui para adicionar o evento ao seu calendário
+  </a>
 
   <script>
     [
@@ -136,16 +139,18 @@
 
     #info{
       --wdth: 100;
-      --wght: 400;
+      --wght: 300;
+      color: inherit;
+      line-height: 1.6em;
       text-align: center;
       text-transform: uppercase;
-      line-height: 1.6em;
-    }
-
-    #info a{
-      --wdth: 100;
-      --wght: 400;
-      color: inherit;
+      text-underline-offset: 2px;
+      text-shadow: 
+        -1px -1px 2px var(--kk-black),
+        +1px -1px 2px var(--kk-black),
+        -1px +1px 2px var(--kk-black),
+        +1px +1px 2px var(--kk-black);
+      z-index: 1;
     }
 
     #art{
@@ -168,7 +173,13 @@
       left: 50%;
       transform: translate(-50%, -50%);
 
-      z-index: 1;
+      text-shadow: 
+        -1px -1px 2px var(--kk-black),
+        +1px -1px 2px var(--kk-black),
+        -1px +1px 2px var(--kk-black),
+        +1px +1px 2px var(--kk-black);
+
+      z-index: 10;
     }
 
     #age{
