fix: :pencil2: changes page text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="noise-overlay"></div>
 
   <div id="art">
-    <h1>depois de 3 anos, kyle finalmente comemora mais uma idade bonita</h1>
+    <h1>kyle comemora mais um número bonito</h1>
     <div id="age"></div>
   </div>
 
