--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
-  <title>Kyle comemora uma idade bonita</title>
+  <title>pf venham &#129402;</title>
   <link rel="stylesheet" href="./css/style.css">
   <script type="module" src="./js/script.js"></script>
 </head>
