fix: :pencil2: updates Google Calendar link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <a 
     id="info"
     target="_blank"
-    href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NjFqMzBkcHBjaGdqY2JiNDZoaWppYjlrY2dybWNiOXA2Z3EzNGI5azZjbzNjZHBwNmdvM2NvaHBjayBreWxlLnR0Lmt1b0Bt&tmsrc=kyle.tt.kuo%40gmail.com" 
+    href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NjFqMzBkcHBjaGdqY2JiNDZoaWppYjlrY2dybWNiOXA2Z3EzNGI5azZjbzNjZHBwNmdvM2NvaHBjayAyZ2hyMTk4YTVvZ2Nib3RtZjYxb2VyMW9pY0Bn&tmsrc=2ghr198a5ogcbotmf61oer1oic%40group.calendar.google.com" 
   >
       Liga dos Botecos<br/>
       R. Álvaro Ramos, 170 - Botafogo<br/>
