fix: :pencil2: updates Google Calendar link... again

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <a 
     id="info"
     target="_blank"
-    href="https://calendar.google.com/event?action=TEMPLATE&tmeid=NjFqMzBkcHBjaGdqY2JiNDZoaWppYjlrY2dybWNiOXA2Z3EzNGI5azZjbzNjZHBwNmdvM2NvaHBjayAyZ2hyMTk4YTVvZ2Nib3RtZjYxb2VyMW9pY0Bn&tmsrc=2ghr198a5ogcbotmf61oer1oic%40group.calendar.google.com" 
+    href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20220806T190000Z%2F20220807T025900Z&text=Anivers%C3%A1rio%20do%20Kyle&details=&location=Liga%20dos%20Botecos%2C%20R.%20%C3%81lvaro%20Ramos%2C%20170%20-%20Botafogo%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2022280-110%2C%20Brazil&allday=false" 
   >
       Liga dos Botecos<br/>
       R. Álvaro Ramos, 170 - Botafogo<br/>
