fix: :pencil2: adds some meta tags, including og:image

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
+  <meta name="designer" content="Kyle Kuo">
+  <meta property="og:title" content="pf venham &#129402;">
+  <meta property="og:image" content="./img/og.jpg">
   <title>pf venham &#129402;</title>
   <link rel="stylesheet" href="./css/style.css">
   <script type="module" src="./js/script.js"></script>
